[package]
name = "ecdsa-sample-4-blinded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa.git" }
curv-kzen = { version = "0.9", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false
